--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <h4>Frooti clone</h4>
                 <p>Frooti clone responsive</p>
                 <a href="./images/frooti images.avif"  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a target="_blank" href="https://sudhev0011.github.io/starbucks-clone-responsive/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a target="_blank" href="https://akshay-v8547.github.io/frooti/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item-3 -->
 
